--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,45 @@
+annotated-types==0.6.0
+blis==0.7.11
+catalogue==2.0.10
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpathlib==0.16.0
+colorama==0.4.6
+confection==0.1.4
 contourpy==1.2.0
 cycler==0.12.1
+cymem==2.0.8
 fonttools==4.47.2
+idna==3.6
+jinja2==3.1.3
 kiwisolver==1.4.5
+langcodes==3.3.0
+markupsafe==2.1.4
 matplotlib==3.8.2
+murmurhash==1.0.10
 numpy==1.26.3
 packaging==23.2
 pillow==10.2.0
+preshed==3.0.9
 pycocotools==2.0.7
+pydantic==2.5.3
+pydantic-core==2.14.6
 pyparsing==3.1.1
 python-dateutil==2.8.2
+requests==2.31.0
+setuptools==69.0.3
 six==1.16.0
+smart-open==6.4.0
+spacy==3.7.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
 tabulate==0.9.0
+thinc==8.2.2
+tqdm==4.66.1
+typer==0.9.0
+typing-extensions==4.9.0
+urllib3==2.1.0
+wasabi==1.1.2
+weasel==0.3.4
